--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="inner">
           <div class="wrapper">
             <div class="avatar">
-              <div class="image" data-img-url="img/about/Senanu.jpeg"></div>
+              <!--<div class="image" data-img-url="img/about/Senanu.jpeg"></div>-->
             </div>
             <div class="menu_list">
               <ul class="transition_link">
