--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       <div class="cavani_tm_mobile_menu">
         <div class="inner">
           <div class="wrapper">
-            <div class="avatar">
+           <!-- <div class="avatar">
               <div class="image" data-img-url="img/about/Senanu.jpeg"></div>
-            </div>
+            </div> -->
             <div class="menu_list">
               <ul class="transition_link">
                 <li class="active"><a href="#home">Home</a></li>
